--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 :root {
   font-family: "Open Sans", sans-serif;
   font-size: 16px;
+  --bg-primary: #23232e;
+  --bg-secondary: #141418;
 }
 
 body {
@@ -10,19 +12,44 @@ body {
   padding: 0;
 }
 
-body::-webkit-scrollbar{
-    width: 0.25rem;
+body::-webkit-scrollbar {
+  width: 0.25rem;
 }
 
-body::-webkit-scrollbar-track{
-    background: #1e1e24;
+body::-webkit-scrollbar-track {
+  background: #1e1e24;
 }
 
-body::-webkit-scrollbar-thumb{
-    background: #6649b8;
+body::-webkit-scrollbar-thumb {
+  background: #6649b8;
 }
 
 main {
   margin-left: 5rem;
   padding: 1rem;
 }
+
+.navbar {
+  width: 5rem;
+  height: 100vh;
+  position: fixed;
+  background-color: var(--bg-primary);
+}
+
+.navbar-nav {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.nav-item {
+  width: 100%;
+}
+
+.nav-item:last-child {
+  margin-top: auto;
+}
+
