--- a/style.css
+++ b/style.css
@@ -1,15 +1,26 @@
 :root {
   font-family: "Open Sans", sans-serif;
   font-size: 16px;
+  --text-primary: #b6b6b6;
+  --text-secondary: #ececec;
   --bg-primary: #23232e;
   --bg-secondary: #141418;
+  --transition-speed: 600ms;
 }
 
 body {
-  background-color: #18181f;
+  background-color: #1c1c1f;
   color: white;
   margin: 0;
   padding: 0;
+}
+
+h1 {
+  text-align: center;
+}
+
+hr {
+  border: 2px solid #6649b8;
 }
 
 body::-webkit-scrollbar {
@@ -26,7 +37,7 @@ body::-webkit-scrollbar-thumb {
 
 main {
   margin-left: 5rem;
-  padding: 1rem;
+  padding: 1rem 5rem 0rem 5rem;
 }
 
 .navbar {
@@ -34,6 +45,7 @@ main {
   height: 100vh;
   position: fixed;
   background-color: var(--bg-primary);
+  transition: width 200ms ease;
 }
 
 .navbar-nav {
@@ -49,7 +61,94 @@ main {
   width: 100%;
 }
 
-.nav-item:last-child {
-  margin-top: auto;
+.nav-link {
+  display: flex;
+  align-items: center;
+  height: 5rem;
+  color: var(--text-primary);
+  text-decoration: none;
+  filter: grayscale(100%) opacity(0.7);
+  transition: 300ms ease;
 }
 
+.nav-link:hover {
+  filter: grayscale(0%) opacity(1);
+  background: var(--bg-secondary);
+  color: var(--text-secondary);
+}
+
+.logo {
+  font-size: 1.5rem;
+  font-weight: bold;
+  letter-spacing: 0.3ch;
+  text-transform: uppercase;
+  margin-bottom: 1rem;
+  text-align: center;
+  width: 100%;
+  color: var(--text-secondary);
+  background: var(--bg-secondary);
+}
+
+.logo svg {
+  transform: rotate(0deg);
+  transition: transform 300ms ease;
+}
+
+.navbar:hover .logo svg {
+  transform: rotate(-180deg);
+}
+
+.link-text {
+  display: none;
+  margin-left: 1rem;
+}
+
+.nav-link svg {
+  min-width: 2rem;
+  margin: 0 1.5rem;
+}
+
+.navbar:hover {
+  width: 14rem;
+}
+
+.navbar:hover .link-text {
+  display: block;
+}
+
+.fa-primary {
+  color: #ff7eee;
+}
+
+.fa-secondary {
+  color: #df49a6;
+}
+
+.fa-primary .fa-secondary {
+  transition: var(--transition-speed);
+}
+
+/* Responsive for small screens */
+@media only screen and (max-width: 600px) {
+  .navbar {
+    bottom: 0;
+    width: 100vw;
+    height: 5rem;
+  }
+
+  .logo {
+    display: none;
+  }
+
+  .navbar-nav {
+    flex-direction: row;
+  }
+
+  .nav-link {
+    justify-content: center;
+  }
+
+  main {
+    margin: 0;
+  }
+}
